# graphicsmagick-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: CMakeLists.txt  build.sh  meta.yaml  windows.patch
